--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ionic-native/camera": "^5.0.0-beta.21",
+    "@ionic-native/camera-preview": "^5.0.0-beta.21",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/crop": "^5.0.0-beta.21",
+    "@ionic-native/native-storage": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
     "@ionic/pro": "2.0.3",
+    "angular-cropperjs": "^0.1.5",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-camera-preview": "0.10.0",
+    "cordova-plugin-crop": "0.4.0",
+    "cordova-plugin-nativestorage": "2.3.2",
     "core-js": "^2.5.4",
+    "cropperjs": "^1.4.3",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -62,7 +69,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
-      "cordova-plugin-camera-preview": {}
+      "cordova-plugin-camera-preview": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-crop": {}
     }
   }
 }
